- (Add) the new scrollbar - (Add) base menu items -  (Add) user fullName in user deatail section (Sidebar) - (Fix) some bugs in dataList View - (Add) clear All filters function and keybinding (alt + c)

--- a/projects/dashboardV2/src/styles.scss
+++ b/projects/dashboardV2/src/styles.scss
@@ -4,37 +4,58 @@
 
 @import "./assets/bulma/extention/bulma-extensions.min.css";
 
-
 app-root.default-theme {
-    .is-divider-vertical[data-content]::after, .is-divider[data-content]::after {
-        background: #fff;
-    }
+	.is-divider-vertical[data-content]::after,
+	.is-divider[data-content]::after {
+		background: #fff;
+	}
 
-    .mat-drawer-container {
-        background-color: #fff;
-    }
+	.mat-drawer-container {
+		background-color: #fff;
+	}
 
-    .hovered-menu {
-        background-color: #f5f5f5;
-    }
+	.hovered-menu {
+		background-color: #f5f5f5;
+	}
 }
 
-
 app-root.dark-theme {
-    .is-divider-vertical[data-content]::after, .is-divider[data-content]::after {
-        background: #303030;
-    }
+	.is-divider-vertical[data-content]::after,
+	.is-divider[data-content]::after {
+		background: #303030;
+	}
 
-    .hovered-menu {
-        background-color: #282f2f;
-    }
+	.hovered-menu {
+		background-color: #282f2f;
+	}
+
+	.ps .ps__rail-y {
+		background-color: #eeeeee0d !important;
+	}
 }
 
 .mat-checkbox-label {
-    margin-right: 5px;
+	margin-right: 5px;
 }
 
 .mat-menu-panel {
-    max-width: unset !important;
-    overflow-x: hidden !important;
+	max-width: unset !important;
+	overflow-x: hidden !important;
+}
+
+::-webkit-scrollbar {
+	width: 5px;
+	background-color: #f5f5f5;
+	background: transparent;
+}
+
+::-webkit-scrollbar-track {
+	// -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
+	background-color: #e9e9e926;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background-color: #888585bf;
 }
